--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </tr>
     <tr>
       <td>3-time</td>
-      <td>https://github.com/Blobsss/3-time</td>
+      <a href>https://github.com/Blobsss/3-time</a>
        </tr>
     <tr>
       <td>creature-walk</td>
