--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </tr>
     <tr>
       <td>Projekt-1</td>
-      <td>https://github.com/Blobsss/Projekt-1</td>
+      <td><a href="https://github.com/Blobsss/Projekt-1"> https://github.com/Blobsss/Projekt-1 </a></td>
        </tr>
     <tr>
       <td>3-time</td>
