--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
        </tr>
     <tr>
       <td>3-time</td>
-      <td>https://github.com/Blobsss/3-time</td>
+      <td><a href="https://github.com/Blobsss/3-time"> https://github.com/Blobsss/3-time</a></td>
        </tr>
     <tr>
       <td>creature-walk</td>
-      <td>https://github.com/Blobsss/creature-walk</td>
+      <td><a href="https://github.com/Blobsss/creature-walk">https://github.com/Blobsss/creature-walk</a></td>
     </tr>
     <tr>
          <td>programmerings-afleveringer        </td>
-      <td>https://github.com/Blobsss/programmerings-afleveringer</td>
+      <td><a href="https://github.com/Blobsss/programmerings-afleveringer"></a></td>
       </tr>
     <tr>
          <td>ternings.generator</td>
-       <td>https://github.com/Blobsss/ternings.generator</td>
+      <td><a href="https://github.com/Blobsss/ternings.generator"></a></td>
       </tr>
     <tr>
          <td>Terninggenerator-2</td>
-       <td>https://github.com/Blobsss/Terninggernerator-2</td>
+      <td><a href="https://github.com/Blobsss/Terninggernerator-2"></a></td>
       </tr>
     <tr>
          <td>test</td>
-       <td>https://github.com/Blobsss/test</td>
+      <td><a href="https://github.com/Blobsss/test"></a></td>
       </tr>
     <tr>
          <td>Naturkatastrofe</td>
-       <td>https://github.com/Blobsss/Naturkatastrofe</td>
+      <td><a href="https://github.com/Blobsss/Naturkatastrofe"></a></td>
       </tr>
     <tr>
          <td>Cordingbrat</td>
-       <td>https://github.com/Blobsss/CordingBrat</td>
+      <td><a href="https://github.com/Blobsss/CordingBrat"></a></td>
       </tr>
     <tr>
          <td>Gui-ting</td>
